- Removed Debug Tools - Tested Game 1,3,4,6,7 - Fixed General Issues - Added Game 7